@@ -1,6 +1,6 @@
 Package: MTurkR
-Version: 0.6.6
-Date: 2015-06-30
+Version: 0.6.7
+Date: 2015-07-01
 Title: R Client for the MTurk Requester API
 Authors@R: c(person("Thomas J.", "Leeper", role = c("aut", "cre"),
                     email = "thosjleeper@gmail.com"),
